--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "agentq-status-updater",
-  "version": "1.0.0",
-  "main": "dist/AgentQStatusUpdater.js",
-  "types": "dist/AgentQStatusUpdater.d.ts",
-  "scripts": {
-    "build": "tsc"
-  },
-  "dependencies": {
-    "agentq-status-updater": "github:etlanda24/agentq-status-updater",
-    "axios": "^1.6.7"
-  },
+  "version": "0.1.0",
+  "main": "index.ts",
+  "module": "index.ts",
+  "type": "module",
   "devDependencies": {
-    "typescript": "^5.3.3"
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "build": "bun build index.ts --outdir dist"
   }
 }
