--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "agentq-status-updater",
   "version": "0.1.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
