--- a/package.json
+++ b/package.json
@@ -1,20 +1,10 @@
 {
-  "name": "agentq-status-updater",
-  "version": "0.1.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "scripts": {
-    "build": "bun build index.ts --outdir dist"
-  },
-  "dependencies": {
-    "axios": "^1.8.4"
+    "name": "@your-scope/my-api-client",
+    "version": "1.0.0",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "scripts": {
+      "build": "bun build src/index.ts --outdir dist"
+    }
   }
-}
+  
